<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. Nicholas Little < arealityfarbetween@googlemail.com >
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later
  ~ version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
  ~ details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Amp.Ris</string>

    <string name="address">Address</string>
    <string name="hint_address">Hostname or IP Address</string>
    <string name="port">Port</string>
    <string name="hint_port">32768</string>
    <string name="connect">Connect</string>
    <string name="connect_try">Connecting to %s…</string>
    <string name="launch_try">Trying to Launch…</string>

    <string name="from_album">From</string>
    <string name="browse_server">Browse Server</string>

    <string name="about">About</string>

    <string name="author">Nicholas Little</string>
    <string name="author_label">by</string>
    <string name="author_email">arealityfarbetween@googlemail.com</string>

    <string name="licence">General Public License</string>
    <string name="licence_url">http://www.gnu.org/licenses/gpl.html</string>

    <string name="licence_preamble">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details</string>

    <string name="needs_server_port">Please Enter Address and Port Number</string>
    <string name="failed_mdns">Starting mDNS Responder Failed. Zeroconf Unavailable…</string>
    <string name="failed_connection">Connection Unsuccessful</string>
    <string name="lost_connection">Disconnected</string>
    <string name="inactive_player">Oh No! Looks like this player is no longer running. Tap the warning icon to see if we can launch it for you</string>
    <string name="host_unknown">Unknown Host</string>

</resources>
